// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CopyPlugin basic should work with multi compiler mode: assets 1`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: assets 2`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin basic should work with multi compiler mode: errors 1`] = `Array []`;

exports[`CopyPlugin basic should work with multi compiler mode: errors 2`] = `Array []`;

exports[`CopyPlugin basic should work with multi compiler mode: warnings 1`] = `Array []`;

exports[`CopyPlugin basic should work with multi compiler mode: warnings 2`] = `Array []`;

exports[`CopyPlugin cache should work with the "filesystem" cache: assets 1`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin cache should work with the "filesystem" cache: assets 2`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin cache should work with the "filesystem" cache: errors 1`] = `Array []`;

exports[`CopyPlugin cache should work with the "filesystem" cache: errors 2`] = `Array []`;

exports[`CopyPlugin cache should work with the "filesystem" cache: warnings 1`] = `Array []`;

exports[`CopyPlugin cache should work with the "filesystem" cache: warnings 2`] = `Array []`;

exports[`CopyPlugin cache should work with the "memory" cache: assets 1`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin cache should work with the "memory" cache: assets 2`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin cache should work with the "memory" cache: errors 1`] = `Array []`;

exports[`CopyPlugin cache should work with the "memory" cache: errors 2`] = `Array []`;

exports[`CopyPlugin cache should work with the "memory" cache: warnings 1`] = `Array []`;

exports[`CopyPlugin cache should work with the "memory" cache: warnings 2`] = `Array []`;

exports[`CopyPlugin logging should logging when "from" is a directory: logs 1`] = `
Object {
  "logs": Array [
    "add \\"./fixtures/directory\\" as a context dependency",
    "begin globbing \\"./fixtures/directory/**/*\\" with a context of \\"./fixtures/directory\\"",
    "determined \\"./fixtures/directory\\" is a directory",
    "determined that \\"./fixtures/directory/.dottedfile\\" should write to \\".dottedfile\\"",
    "determined that \\"./fixtures/directory/directoryfile.txt\\" should write to \\"directoryfile.txt\\"",
    "determined that \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\" should write to \\"nested/deep-nested/deepnested.txt\\"",
    "determined that \\"./fixtures/directory/nested/nestedfile.txt\\" should write to \\"nested/nestedfile.txt\\"",
    "end to adding additional assets",
    "found \\"./fixtures/directory/.dottedfile\\"",
    "found \\"./fixtures/directory/directoryfile.txt\\"",
    "found \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\"",
    "found \\"./fixtures/directory/nested/nestedfile.txt\\"",
    "getting stats for \\"./fixtures/directory\\" to determinate \\"fromType\\"",
    "processing from \\"directory\\" to \\".\\"",
    "reading \\"./fixtures/directory/.dottedfile\\" to write to assets",
    "reading \\"./fixtures/directory/directoryfile.txt\\" to write to assets",
    "reading \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\" to write to assets",
    "reading \\"./fixtures/directory/nested/nestedfile.txt\\" to write to assets",
    "start to adding additional assets",
    "writing \\".dottedfile\\" to compilation assets from \\"./fixtures/directory/.dottedfile\\"",
    "writing \\"directoryfile.txt\\" to compilation assets from \\"./fixtures/directory/directoryfile.txt\\"",
    "writing \\"nested/deep-nested/deepnested.txt\\" to compilation assets from \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\"",
    "writing \\"nested/nestedfile.txt\\" to compilation assets from \\"./fixtures/directory/nested/nestedfile.txt\\"",
  ],
}
`;

exports[`CopyPlugin logging should logging when "from" is a file: logs 1`] = `
Object {
  "logs": Array [
    "add \\"./fixtures/file.txt\\" as a file dependency",
    "begin globbing \\"./fixtures/file.txt\\" with a context of \\"./fixtures\\"",
    "determined \\"./fixtures/file.txt\\" is a file",
    "determined that \\"./fixtures/file.txt\\" should write to \\"file.txt\\"",
    "end to adding additional assets",
    "found \\"./fixtures/file.txt\\"",
    "getting stats for \\"./fixtures/file.txt\\" to determinate \\"fromType\\"",
    "processing from \\"file.txt\\" to \\".\\"",
    "reading \\"./fixtures/file.txt\\" to write to assets",
    "start to adding additional assets",
    "writing \\"file.txt\\" to compilation assets from \\"./fixtures/file.txt\\"",
  ],
}
`;

exports[`CopyPlugin logging should logging when "from" is a glob: logs 1`] = `
Object {
  "logs": Array [
    "add \\"./fixtures/directory\\" as a context dependency",
    "add ./fixtures/directory/directoryfile.txt as fileDependencies",
    "add ./fixtures/directory/nested/deep-nested/deepnested.txt as fileDependencies",
    "add ./fixtures/directory/nested/nestedfile.txt as fileDependencies",
    "begin globbing \\"./fixtures/directory/**\\" with a context of \\"./fixtures\\"",
    "determined \\"./fixtures/directory/**\\" is a glob",
    "determined that \\"./fixtures/directory/directoryfile.txt\\" should write to \\"directory/directoryfile.txt\\"",
    "determined that \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\" should write to \\"directory/nested/deep-nested/deepnested.txt\\"",
    "determined that \\"./fixtures/directory/nested/nestedfile.txt\\" should write to \\"directory/nested/nestedfile.txt\\"",
    "end to adding additional assets",
    "found \\"./fixtures/directory/directoryfile.txt\\"",
    "found \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\"",
    "found \\"./fixtures/directory/nested/nestedfile.txt\\"",
    "getting stats for \\"./fixtures/directory/**\\" to determinate \\"fromType\\"",
    "processing from \\"directory/**\\" to \\".\\"",
    "reading \\"./fixtures/directory/directoryfile.txt\\" to write to assets",
    "reading \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\" to write to assets",
    "reading \\"./fixtures/directory/nested/nestedfile.txt\\" to write to assets",
    "start to adding additional assets",
    "writing \\"directory/directoryfile.txt\\" to compilation assets from \\"./fixtures/directory/directoryfile.txt\\"",
    "writing \\"directory/nested/deep-nested/deepnested.txt\\" to compilation assets from \\"./fixtures/directory/nested/deep-nested/deepnested.txt\\"",
    "writing \\"directory/nested/nestedfile.txt\\" to compilation assets from \\"./fixtures/directory/nested/nestedfile.txt\\"",
  ],
}
`;

exports[`CopyPlugin stats should work have assets info: assets 1`] = `
Object {
  ".dottedfile": "dottedfile contents
",
  "31d6cfe0d16ae931b73c.txt": "",
  "directoryfile.txt": "new",
  "nested/deep-nested/deepnested.txt": "",
  "nested/nestedfile.txt": "",
}
`;

exports[`CopyPlugin stats should work have assets info: assets info 1`] = `
Array [
  Object {
    "info": Object {
      "copied": undefined,
      "immutable": undefined,
      "sourceFilename": undefined,
    },
    "name": "main.js",
  },
  Object {
    "info": Object {
      "copied": undefined,
      "immutable": true,
      "sourceFilename": "directory/nested/deep-nested/deepnested.txt",
    },
    "name": "31d6cfe0d16ae931b73c.txt",
  },
  Object {
    "info": Object {
      "copied": true,
      "immutable": undefined,
      "sourceFilename": "directory/.dottedfile",
    },
    "name": ".dottedfile",
  },
  Object {
    "info": Object {
      "copied": true,
      "immutable": undefined,
      "sourceFilename": "directory/directoryfile.txt",
    },
    "name": "directoryfile.txt",
  },
  Object {
    "info": Object {
      "copied": true,
      "immutable": undefined,
      "sourceFilename": "directory/nested/nestedfile.txt",
    },
    "name": "nested/nestedfile.txt",
  },
  Object {
    "info": Object {
      "copied": true,
      "immutable": undefined,
      "sourceFilename": "directory/nested/deep-nested/deepnested.txt",
    },
    "name": "nested/deep-nested/deepnested.txt",
  },
]
`;

exports[`CopyPlugin stats should work have assets info: errors 1`] = `Array []`;

exports[`CopyPlugin stats should work have assets info: warnings 1`] = `Array []`;
